@@ -10,7 +10,6 @@ EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{24EEDF66-CE38-4A6C-830A-58BD036474CD}"
 	ProjectSection(SolutionItems) = preProject
 		changes.txt = changes.txt
-		Conditions.FxCop = Conditions.FxCop
 		license.txt = license.txt
 		readme.txt = readme.txt
 	EndProjectSection
